# profiling

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  readme.md
core/: CMakeLists.txt
core/executables/: test_profiler.cpp
core/executables/example/: example.cpp
core/executables/plotter/: csv.cpp  csv.hpp  defines.hpp  kvp.cpp  kvp.hpp  plotter.cpp  plotter.hpp
core/src/: defines.hpp.in
core/src/app_utils/: app.hpp  implementation.cpp  render.hpp  window.hpp
core/src/profiler/: profiler.cpp  profiler.hpp
core/src/utils/: style.hpp
